kubernetes/ingress/ingress-devops-utils.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-utils-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: devops.kube-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-utils-service
                port:
                  number: 5050
