kubernetes/ingress/ingress-microfail.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microfail-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: microfail.kube-lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microfail-service
            port:
              number: 8000
